--- a/BPG_site/main_site/templates/about.html
+++ b/BPG_site/main_site/templates/about.html
@@ -22,7 +22,7 @@
 		.headerimg-1 {
 		  background-position: center;
 		  background-size: cover;
-		  background-image: url("images/header.png");
+		  background-image: url("/static/images/header.png");
 		  width:100%;
 		  min-height:15%;
 		}
@@ -39,12 +39,12 @@
 	<header class="headerimg-1 w3-display-container"> 
 	
 		<div class="w3-container w3-center w3-third">
-			<a href="home.html" class="w3-button w3-white w3-padding-large w3-large w3-margin-left w3-margin-top w3-opacity w3-hover-opacity-off w3-left">
-			<i class="fa fa-arrow-left w3-margin-right"></i>Back</a>
+			<button onclick="window.history.back();" class="w3-button w3-white w3-padding-large w3-large w3-margin-left w3-margin-top w3-opacity w3-hover-opacity-off w3-left">
+			<i class="fa fa-arrow-left w3-margin-right"></i>Back</button>
 		</div>
 	
 		<div class="w3-container w3-third">
-			<a href="home.html"><img src="images/BPG_logo.png" class="w3-image" style="padding:24px; min-width:100%;"></a>
+			<a href="/"><img src="/static/images/BPG_logo.png" class="w3-image" style="padding:24px; min-width:100%;"></a>
 		</div>
 	
 	</header>
@@ -63,7 +63,7 @@
 				and look forward to providing your next shoot with with top quality grip support.
 			</p>
 			
-			<a href="contact.html" class="w3-button w3-white w3-padding-large w3-large w3-margin-left w3-margin-top w3-opacity w3-hover-opacity-off w3-center">Contact Us</a>
+			<a href="/Contact" class="w3-button w3-white w3-padding-large w3-large w3-margin-left w3-margin-top w3-opacity w3-hover-opacity-off w3-center">Contact Us</a>
 			
 		</div>
 
