--- a/BPG_site/main_site/templates/home.html
+++ b/BPG_site/main_site/templates/home.html
@@ -21,7 +21,7 @@
 		.bgimg-1 {
 		  background-position: center;
 		  background-size: cover;
-		  background-image: url("images/bg_img.jpg");
+		  background-image: url("/static/images/bg_img.jpg");
 		  min-height: 100%;
 		}
 
@@ -38,18 +38,18 @@
 	
 		<div class="w3-display-topleft w3-half" style="padding:24px">
 			
-			<img src="images/BPG_logo.png">
+			<img src="/static/images/BPG_logo.png">
 			
 		</div>
 
 		<div class="w3-display-topright w3-half" style="padding:24px">
 
-			<div class="w3-right-align"><h4>Production ready grip packages for <br>commercials/promos/second and <br>splinter units</h2></div>
+			<div class="w3-right-align"><h4>Production ready grip packages for <br>commercials/promos/splinter and <br>second units</h2></div>
 
 				<p>
-					<a href="contact.html" class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off w3-right">Contact</a>
+					<a href="/Contact" class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off w3-right">Contact</a>
 
-					<a href="about.html" class="w3-button w3-white w3-padding-large w3-large w3-margin-right w3-opacity w3-hover-opacity-off w3-right">About</a>
+					<a href="/About" class="w3-button w3-white w3-padding-large w3-large w3-margin-right w3-opacity w3-hover-opacity-off w3-right">About</a>
 				</p>
 
 			</div>
@@ -57,15 +57,15 @@
 		<div class="w3-display-bottomleft" style="padding:24px"> 
 
 			<p>
-				<a href="3ton.html" class="w3-button w3-white w3-padding-large w3-xlarge w3-opacity w3-hover-opacity-off w3-left">3 Ton</a>
+				<a href="/3Ton" class="w3-button w3-white w3-padding-large w3-xlarge w3-opacity w3-hover-opacity-off w3-left">3 Ton</a>
 
-				<a href="5ton.html" class="w3-button w3-white w3-padding-large w3-xlarge w3-margin-left w3-opacity w3-hover-opacity-off w3-left">5 Ton</a>
+				<a href="/5Ton" class="w3-button w3-white w3-padding-large w3-xlarge w3-margin-left w3-opacity w3-hover-opacity-off w3-left">5 Ton</a>
 			</p>
 
 			<p>
 				<a href="http://e-slide.com/specs.html" target="_blank" class="w3-button w3-white w3-padding-large w3-xlarge w3-margin-top w3-opacity w3-hover-opacity-off w3-left" >Sliders</a>
 
-				<a href="giraffe.html" class="w3-button w3-white w3-padding-large w3-xlarge w3-margin-left w3-margin-top w3-opacity w3-hover-opacity-off w3-left">Giraffe Crane</a>
+				<a href="/Giraffe" class="w3-button w3-white w3-padding-large w3-xlarge w3-margin-left w3-margin-top w3-opacity w3-hover-opacity-off w3-left">Giraffe Crane</a>
 			</p>
 
 		</div>
