Changed image urls to postimage urls

--- a/BPG_site/main_site/templates/giraffe.html
+++ b/BPG_site/main_site/templates/giraffe.html
@@ -22,7 +22,7 @@
 		.headerimg-1 {
 		  background-position: center;
 		  background-size: cover;
-		  background-image: url("/static/images/header.png");
+		  background-image: url("https://i.postimg.cc/8zRkWSpk/header.png");
 		  width:100%;
 		  min-height:15%;
 		}
@@ -44,7 +44,7 @@
 		</div>
 	
 		<div class="w3-container w3-third">
-			<a href="/"><img src="/static/images/BPG_logo.png" class="w3-image" style="padding:24px; min-width:100%;"></a>
+			<a href="/"><img src="https://i.postimg.cc/zGVZzF9w/BPG-logo.png" class="w3-image" style="padding:24px; min-width:100%;"></a>
 		</div>
 	
 	</header>
@@ -61,7 +61,7 @@
 				Fast and Versatile</br>
 			</h5>
 			
-			<img src="/static/images/giraffe.gif" class="w3-image" style="padding:36px; min-width:50%;">
+			<img src="https://i.postimg.cc/k57JvpGQ/giraffe.gif" class="w3-image" style="padding:36px; min-width:50%;">
 			
 			<table class="w3-table w3-card w3-margin-bottom" style="margin:auto; width:50%;">
 				<tr>
