--- a/BPG_site/main_site/templates/home.html
+++ b/BPG_site/main_site/templates/home.html
@@ -21,7 +21,7 @@
 		.bgimg-1 {
 		  background-position: center;
 		  background-size: cover;
-		  background-image: url("/static/images/bg_img.jpg");
+		  background-image: url("https://i.postimg.cc/sXVM125R/bg-img.jpg");
 		  min-height: 100%;
 		}
 
@@ -38,7 +38,7 @@
 	
 		<div class="w3-display-topleft w3-half" style="padding:24px">
 			
-			<img src="/static/images/BPG_logo.png">
+			<img src="https://i.postimg.cc/zGVZzF9w/BPG-logo.png">
 			
 		</div>
 
