--- a/BPG_site/main_site/templates/5ton.html
+++ b/BPG_site/main_site/templates/5ton.html
@@ -22,7 +22,7 @@
 		.headerimg-1 {
 		  background-position: center;
 		  background-size: cover;
-		  background-image: url("/static/images/header.png");
+		  background-image: url("https://i.postimg.cc/8zRkWSpk/header.png");
 		  width:100%;
 		  min-height:15%;
 		}
@@ -44,7 +44,7 @@
 		</div>
 	
 		<div class="w3-container w3-third">
-			<a href="/"><img src="/static/images/BPG_logo.png" class="w3-image" style="padding:24px; min-width:100%;"></a>
+			<a href="/"><img src="https://i.postimg.cc/zGVZzF9w/BPG-logo.png" class="w3-image" style="padding:24px; min-width:100%;"></a>
 		</div>
 	
 	</header>
