--- a/BPG_site/main_site/templates/about.html
+++ b/BPG_site/main_site/templates/about.html
@@ -57,7 +57,7 @@
 
 			<p>
 				Big Picture Grip is a grip rental house serving New Mexico and the southwest. We are a family </br>
-				business, focused on providing production ready grip trucks, with up to date equipment and </br>
+				business, focused on providing production-ready grip trucks, with up to date equipment and </br>
 				organized layouts. BPG's founder, Evan Nelson, has over 20 years in the business as a grip, </br>
 				technocrane operator and key grip. We have teamed up with the very best crews here in NM, </br>
 				and look forward to providing your next shoot with with top quality grip support.
