Changed main page logo to scale correctly

--- a/BPG_site/main_site/templates/home.html
+++ b/BPG_site/main_site/templates/home.html
@@ -36,9 +36,9 @@
 
 	<header class="bgimg-1 w3-display-container"> 
 	
-		<div class="w3-display-topleft w3-half" style="padding:24px">
+		<div class="w3-display-topleft w3-half" style="padding:18px">
 			
-			<img src="https://i.postimg.cc/zGVZzF9w/BPG-logo.png">
+			<img src="https://i.postimg.cc/zGVZzF9w/BPG-logo.png" style="width: 100%">
 			
 		</div>
 
