Added relative element positioning
Also changed padding

--- a/BPG_site/main_site/templates/home.html
+++ b/BPG_site/main_site/templates/home.html
@@ -28,6 +28,15 @@
 		.w3-bar .w3-button {
 		  padding: 16px;
 		}
+		
+		/* redefine css elements for mobile */
+		@media screen and (max-width: 481px){
+
+			.w3-right-align{
+				text-align:center!important;
+			}
+		
+		}
 
 	</style>
 
@@ -36,13 +45,13 @@
 
 	<header class="bgimg-1 w3-display-container"> 
 	
-		<div class="w3-display-topleft w3-half" style="padding:18px">
+		<div class="w3-display-topleft w3-half" style="padding:24px; position:relative;">
 			
 			<img src="https://i.postimg.cc/zGVZzF9w/BPG-logo.png" style="width: 100%">
 			
 		</div>
 
-		<div class="w3-display-topright w3-half" style="padding:24px">
+		<div class="w3-display-topright w3-half" style="padding:24px; position:relative;">
 
 			<div class="w3-right-align"><h4>Production ready grip packages for <br>commercials/promos/splinter and <br>second units</h2></div>
 
