Centered display and about buttons on mobile

--- a/BPG_site/main_site/templates/home.html
+++ b/BPG_site/main_site/templates/home.html
@@ -35,7 +35,14 @@
 			.w3-right-align{
 				text-align:center!important;
 			}
-		
+			
+			.w3-right, w3-left{
+				float:none!important;
+			}
+			
+			p{
+				text-align:center!important;
+			}
 		}
 
 	</style>
@@ -51,7 +58,7 @@
 			
 		</div>
 
-		<div class="w3-display-topright w3-half" style="padding:24px; position:relative;">
+		<div class="w3-display-topright" style="padding:24px; position:relative;">
 
 			<div class="w3-right-align"><h4>Production ready grip packages for <br>commercials/promos/splinter and <br>second units</h2></div>
 
