Changed mobile-visible and desktop-visible to CSS classes

--- a/BPG_site/main_site/templates/home.html
+++ b/BPG_site/main_site/templates/home.html
@@ -29,18 +29,18 @@
 		  padding: 16px;
 		}
 		
-		#mobile-visible{
+		.mobile-visible{
 			display:none;
 		}
 		
 		/* display different elements for mobile */
 		@media screen and (max-width: 481px){
 			
-			#desktop-visible{
+			.desktop-visible{
 				display:none;
 			}
 			
-			#mobile-visible{
+			.mobile-visible{
 				display:block;
 			}
 		}
@@ -58,7 +58,7 @@
 			
 		</div>
 		
-		<div id="desktop-visible">
+		<div class="desktop-visible">
 
 			<div class="w3-display-topright" style="padding:24px; position:relative;">
 
@@ -90,7 +90,7 @@
 		
 		</div>
 		
-		<div id="mobile-visible">
+		<div class="mobile-visible">
 		
 			<div style="padding:24px; text-align:center;">
 				<h4>Production ready grip packages for commercials/promos/splinter and second units</h4>
