--- a/BPG_site/main_site/templates/home.html
+++ b/BPG_site/main_site/templates/home.html
@@ -87,6 +87,22 @@
 				</p>
 
 			</div>
+			
+			<div class="w3-display-bottomright" style="text-align:center; padding:24px; color:white">
+			
+				<p>
+					<h4><b>Now Offering:</b></h4>
+				</p>
+			
+				<p>
+					<a href="http://www.black-tek.com/airrig/camerakit.php?lang=en" target="_blank" class="w3-button w3-black w3-padding-large w3-xlarge w3-margin-right w3-margin-bottom w3-opacity w3-hover-opacity-off w3-right">Black-Tek</a>
+				</p>
+				
+				<p>
+					<h4><b>AirRig Camera </br>Mount</b></h4>
+				</p>
+			
+			</div>
 		
 		</div>
 		
