Added Black-Tek to mobile site
Made site responsive to devices in landscape mode

--- a/BPG_site/main_site/templates/home.html
+++ b/BPG_site/main_site/templates/home.html
@@ -34,7 +34,7 @@
 		}
 		
 		/* display different elements for mobile */
-		@media screen and (max-width: 481px){
+		@media screen and (max-width: 481px), (max-height: 415px){
 			
 			.desktop-visible{
 				display:none;
@@ -88,7 +88,7 @@
 
 			</div>
 			
-			<div class="w3-display-bottomright" style="text-align:center; padding:24px; color:white">
+			<div class="w3-display-bottomright" style="text-align:center; padding-right:24px; padding-bottom:15px; color:white">
 			
 				<p>
 					<h4><b>Now Offering:</b></h4>
@@ -124,6 +124,22 @@
 				<p><a href="http://e-slide.com/specs.html" target="_blank" class="w3-button w3-white w3-padding-large w3-xlarge w3-margin-top w3-opacity w3-hover-opacity-off" >Sliders</a></p>
 				
 				<p><a href="/Giraffe" class="w3-button w3-white w3-padding-large w3-xlarge w3-margin-top w3-opacity w3-hover-opacity-off">Giraffe Crane</a></p>
+				
+				<div style="text-align:center; padding:24px; color:white">
+			
+					<p>
+						<h4><b>Now Offering:</b></h4>
+					</p>
+			
+					<p>
+						<a href="http://www.black-tek.com/airrig/camerakit.php?lang=en" target="_blank" class="w3-button w3-black w3-padding-large w3-xlarge w3-margin-bottom w3-opacity w3-hover-opacity-off">Black-Tek</a>
+					</p>
+				
+					<p>
+						<h4><b>AirRig Camera </br>Mount</b></h4>
+					</p>
+			
+			</div>
 				
 			</div>
 		
