Updated error pages, added new logos

--- a/BPG_site/main_site/templates/home.html
+++ b/BPG_site/main_site/templates/home.html
@@ -54,7 +54,7 @@
 	
 		<div class="w3-display-topleft w3-half" style="padding:24px; position:relative;">
 			
-			<img src="https://i.postimg.cc/zGVZzF9w/BPG-logo.png" style="width: 100%">
+			<img src="https://i.postimg.cc/TPB9KY5x/BPG-alt-logo.png" style="width: 100%">
 			
 		</div>
 		
