--- a/BPG_site/main_site/templates/404.html
+++ b/BPG_site/main_site/templates/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>3 Ton</title>
+	<title>404 Error</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -30,6 +30,30 @@
 		.w3-bar .w3-button {
 		  padding: 16px;
 		}
+		
+		.mobile-visible{
+			display:none;
+		}
+		
+		/* display different elements for mobile */
+		@media screen and (max-width: 481px){
+			
+			.desktop-visible{
+				display:none;
+			}
+			
+			.mobile-visible{
+				display:block;
+			}
+			
+			.headerimg-1 {
+		 		background-position: center;
+		 		background-size: cover;
+		  		background-image: url("https://i.postimg.cc/8zRkWSpk/header.png");
+		  		width:100%;
+		  		min-height:25%;
+			}
+		}
 
 	</style>
 </head>
@@ -38,13 +62,22 @@
 
 	<header class="headerimg-1 w3-display-container"> 
 	
-		<div class="w3-container w3-center w3-third">
-			<button onclick="window.history.back();" class="w3-button w3-white w3-padding-large w3-large w3-margin-left w3-margin-top w3-opacity w3-hover-opacity-off w3-left">
-			<i class="fa fa-arrow-left w3-margin-right"></i>Back</button>
+		<div class="desktop-visible">
+			<div class="w3-container w3-center w3-third">
+				<button onclick="window.history.back();" class="w3-button w3-white w3-padding-large w3-large w3-margin-left w3-margin-top w3-opacity w3-hover-opacity-off w3-left">
+				<i class="fa fa-arrow-left w3-margin-right"></i>Back</button>
+			</div>
+		</div>
+		
+		<div class="mobile-visible">
+			<div class="w3-container w3-center w3-third">
+				<button onclick="window.history.back();" class="w3-button w3-white w3-padding-large w3-large w3-margin-left w3-margin-top w3-opacity w3-hover-opacity-off">
+				<i class="fa fa-arrow-left w3-margin-right"></i>Back</button>
+			</div>
 		</div>
 	
 		<div class="w3-container w3-third">
-			<a href="/"><img src="https://i.postimg.cc/zGVZzF9w/BPG-logo.png" class="w3-image" style="padding:24px; min-width:100%;"></a>
+			<a href="/"><img src="https://i.postimg.cc/RZL51yQ2/BPG-logo-updated.png" class="w3-image" style="padding:24px; min-width:100%;"></a>
 		</div>
 	
 	</header>
