--- a/BPG_site/main_site/templates/contact.html
+++ b/BPG_site/main_site/templates/contact.html
@@ -77,7 +77,7 @@
 		</div>
 	
 		<div class="w3-container w3-third">
-			<a href="/"><img src="https://i.postimg.cc/zGVZzF9w/BPG-logo.png" class="w3-image" style="padding:24px; min-width:100%;"></a>
+			<a href="/"><img src="https://i.postimg.cc/RZL51yQ2/BPG-logo-updated.png" class="w3-image" style="padding:24px; min-width:100%;"></a>
 		</div>
 	
 	</header>
