Updated item list

--- a/BPG_site/main_site/templates/5ton.html
+++ b/BPG_site/main_site/templates/5ton.html
@@ -215,7 +215,6 @@
 				
 					<p>
 						<b>1</b>- 20x20 Frame </br>
-						<b>1</b> - 12x20 Frame </br>
 					</p>
 				
 					<h4>12x</h4>
@@ -248,15 +247,15 @@
 						<b>1</b> - silk</br>					
 						<b>1</b> - ultra bounce </br>	
 					</p>
+					
+					<h4>20x</h4>
 				
 					<p>
-						<b>1</b> - 20x20 solid </br>					
-						<b>1</b> - 20x20 ultra bounce </br>		
-					</p>
-				
-					<p>
-						<b>1</b> - 12x20 solid </br>				
-						<b>1</b> - 12x20 ultrabouce </br>
+						<b>1</b> - solid </br>
+						<b>1</b> - single </br>					
+						<b>1</b> - double </br>				
+						<b>1</b> - silk</br>					
+						<b>1</b> - ultra bounce </br>	
 					</p>
 					
 				</div>
