--- a/BPG_site/main_site/templates/about.html
+++ b/BPG_site/main_site/templates/about.html
@@ -36,7 +36,7 @@
 		}
 		
 		/* display different elements for mobile */
-		@media screen and (max-width: 481px){
+		@media screen and (max-width: 481px), (max-height: 415px){
 			
 			.desktop-visible{
 				display:none;
