Fixed margin, removed typo

--- a/BPG_site/main_site/templates/about.html
+++ b/BPG_site/main_site/templates/about.html
@@ -91,7 +91,7 @@
 			<div class="desktop-visible">
 				<p>
 					Big Picture Grip is a grip rental house serving New Mexico and the southwest. We are a family </br>
-					business, focused on providing production-ready grip trucks, with up to date equipment and </br>
+					business, focused on providing production ready grip trucks, with up to date equipment and </br>
 					organized layouts. BPG's founder, Evan Nelson, has over 20 years in the business as a grip, </br>
 					technocrane operator and key grip. We have teamed up with the very best crews here in NM, </br>
 					and look forward to providing your next shoot with with top quality grip support.
@@ -101,14 +101,14 @@
 			<div class="mobile-visible">
 				<p>
 					Big Picture Grip is a grip rental house serving New Mexico and the southwest. We are a family 
-					business, focused on providing production-ready grip trucks, with up to date equipment and 
+					business, focused on providing production ready grip trucks, with up to date equipment and 
 					organized layouts. BPG's founder, Evan Nelson, has over 20 years in the business as a grip,
 					technocrane operator and key grip. We have teamed up with the very best crews here in NM,
 					and look forward to providing your next shoot with with top quality grip support.
 				</p>
 			</div>
 			
-			<a href="/Contact" class="w3-button w3-white w3-padding-large w3-large w3-margin-left w3-margin-top w3-opacity w3-hover-opacity-off w3-center">Contact Us</a>
+			<a href="/Contact" class="w3-button w3-white w3-padding-large w3-large w3-margin-bottom w3-margin-top w3-opacity w3-hover-opacity-off w3-center">Contact Us</a>
 			
 		</div>
 
