--- a/BPG_site/main_site/templates/home.html
+++ b/BPG_site/main_site/templates/home.html
@@ -5,6 +5,7 @@
 	<title>Big Picture Grip</title>
 	
 	<meta name="description" content="Production ready grip packages for commercials, promos, splinter and second units. Serving NM and the Southwest with grip truck rentals, specialty grip equipment, sliders and cranes.">
+	<meta name="keywords" content="Grip, Production, Lighting, Albuquerque, New Mexico, Car rigging">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
